<resources>
    <string name="app_name">TechnicalAssessment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="textView1">TextView</string>

    <string-array name="menu_items">
        <item>UI Assessment</item>
        <item>Webservice Assessment</item>
        <item>CustomView Assessment</item>
        <item>ComplexView Assessment</item>
    </string-array>

    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="ui_assessment_test">UI Assessment Test</string>
    <string name="web_service_assessment_test">WebService Assessment Test</string>
    <string name="network_error">Error downloading data</string>

    <string-array name="item_list">
        <item>     Item1     </item>
        <item>     Item2     </item>
        <item>     Item3     </item>
        <item>     Item4     </item>
        <item>     Item5     </item>
    </string-array>


    <string name="navigate">Navigate</string>
    <string name="google_app_id">640453540007</string>
    <string name="select">Select</string>
    <string name="mode_of_transport">Mode Of Transport</string>
    <string name="map_view">Map</string>
    <string name="navigation_app">Navigation</string>
    <string name="okay">Okay</string>
    <string name="please_check_internet_connection">Please check the internet connection</string>
    <string name="connection_error">No Internet</string>
    <string name="title_activity_maps">Map</string>
    <string name="fragment">Fragment</string>
    <string name="app_titile">Technical Assessment</string>
    <string name="custom_view_assessment">CustomView Assessment Test</string>
    <string name="progress">CUSTOM PROGRESSBAR</string>
    <string name="_25_percentage">25%</string>
    <string name="_50_percentage">50%</string>
    <string name="_75_percentage">75%</string>
    <string name="_100_percentage">100%</string>


    <string name="complexview_assessment">Complex View Assessment</string>
    <string name="initiate_audio_call">You have initiated an audio call to</string>
    <string name="initiate_video_call">You have initiated a video call to</string>
    <string name="initiate_text_message">You have initiated a text message to</string>


</resources>
