<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
      <variable
            name="handler"
            type="com.android.app.technicalassesment.viewmodel.UiAssessmentFragmentViewModel"/>


    </data>

    <android.support.v4.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:layout_margin="5dp"
                android:id="@+id/horizontalItemList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:configure="@{handler.getItemListConfig}"
             >

            </android.support.v7.widget.RecyclerView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/round_corner_layout">

                <android.support.v4.view.ViewPager

                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"


                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                  <com.viewpagerindicator.CirclePageIndicator
                        android:id="@+id/indicator"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        app:centered="true"
                        app:fillColor="@color/primary"
                        app:pageColor="@color/colorPrimary"
                        app:snap="true"


                        />

                </LinearLayout>

            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/round_corner_layout"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="?attr/colorAccent"
                    android:text="@string/textView1"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/textView1"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAccent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="?attr/colorAccent"

                    android:text="@string/textView1"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_layout">

                <TextView
                    android:id="@+id/seletedItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/blue"
                    android:text="@{handler.getSelectedItem}"/>


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/buttonPanel"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@{handler.selectedColor}"
                android:orientation="horizontal"
                android:padding="10dp">


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/color_red"
                    android:onClick="@{()->handler.colorSelector(`red`)}"
                    android:tag="@string/color_red"
                    android:id="@+id/redButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/color_blue"
                    android:tag="@string/color_blue"
                    android:onClick="@{()->handler.colorSelector(`blue`)}"

                    android:id="@+id/blueButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/color_green"
                    android:tag="@string/color_green"
                    android:onClick="@{()->handler.colorSelector(`green`)}"
                    android:id="@+id/greenButton"/>


            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>
